# tango-examples-java

./: .gitignore  README.md  version.gradle
AreaDescriptionJava/: .classpath  .project  AndroidManifest.xml  project.properties
AreaLearningJava/: .classpath  .project  AndroidManifest.xml  CMakeLists.txt  build.gradle  package.xml  project.properties
AugmentedRealitySample/: CMakeLists.txt  package.xml
JAreaLearningSample/: .project  AndroidManifest.xml
PointCloudJava/: .classpath  .project  AndroidManifest.xml  CMakeLists.txt  package.xml
PointCloudJava/app/: build.gradle
PointCloudJava/app/src/main/: AndroidManifest.xml
PointCloudJava/app/src/main/java/com/projecttango/experiments/javapointcloud/: PCRenderer.java  PointCloudActivity.java  PointCloudManager.java  PointCloudRajawaliRenderer.java  package-info.java
PointCloudJava/app/src/main/res/layout/: activity_jpoint_cloud.xml
PointCloudJava/res/layout/: activity_jpoint_cloud.xml
PointCloudJava/res/values/: strings.xml
PointCloudJava/res/values-v14/: styles.xml
PointCloudJava/src/com/projecttango/experiments/javapointcloud/: PCRenderer.java  PointCloudActivity.java  package-info.java
PointCloudJava/src/com/projecttango/pointcloudjava/: JPointCloud.java  PCRenderer.java
TangoUtils/: .project  AndroidManifest.xml  CMakeLists.txt  import-summary.txt  package.xml
TangoUtils/app/: build.gradle
TangoUtils/app/src/main/java/com/projecttango/rajawali/: DeviceExtrinsics.java  Pose.java  ScenePoseCalcuator.java  ScenePoseCalculator.java  TouchViewHandler.java
TangoUtils/app/src/main/java/com/projecttango/rajawali/ar/: TangoRajawaliRenderer.java  TangoRajawaliView.java
TangoUtils/app/src/main/java/com/projecttango/rajawali/renderables/: Axes.java  Frustum.java  FrustumAxes.java  Grid.java  PointCloud.java  Trajectory.java
TangoUtils/app/src/main/java/com/projecttango/rajawali/renderables/primitives/: Points.java
TangoUtils/app/src/main/java/com/projecttango/tangoutils/: ModelMatCalculator.java  TangoPoseUtilities.java
TangoUtils/app/src/main/java/com/projecttango/tangoutils/renderables/: CameraFrustum.java  CameraFrustumAndAxis.java  Grid.java  PointCloud.java  RenderUtils.java
TangoUtils/app/src/main/res/values/: strings.xml
TangoUtils/res/values/: strings.xml  styles.xml
TangoUtils/src/com/projecttango/tangoutils/: MathUtils.java  ModelMatCalculator.java  Renderer.java
TangoUtils/src/com/projecttango/tangoutils/renderables/: Axis.java  CameraFrustum.java  CameraFrustumAndAxis.java  Grid.java  PointCloud.java  RenderUtils.java  Renderable.java  Trajectory.java
VideoOverlaySample/: AndroidManifest.xml  CMakeLists.txt  build.gradle  package.xml
VideoOverlaySample/app/: build.gradle
VideoOverlaySample/app/src/main/: AndroidManifest.xml
VideoOverlaySample/app/src/main/java/com/projecttango/experiments/videooverlaysample/: MainActivity.java
VideoOverlaySample/app/src/main/res/layout/: activity_main.xml
VideoOverlaySample/app/src/main/res/values/: strings.xml
VideoOverlaySample/res/layout/: activity_main.xml
VideoOverlaySample/src/com/projecttango/videooverlaysample/: MainActivity.java
(+466 files in other folders)
